<resources>
    <string name="app_name">Werewolves of Thiercelieux</string>
    <string name="app_title">Werewolves of Thiercelieux</string>
    <string name="button_add_player_text">Add player</string>
    <string name="label_player_list">List of players</string>
    <string name="play_text_button">Play</string>
    <string name="player_name_hint">Player\'s name</string>
    <string name="quit_text_button">Quit</string>
    <string name="start_game_button_text">Start Game</string>
    <string name="random_gm_text_button">Randomize Game Master</string>
    <string name="edit_text_button">Edit</string>
    <string name="confirm_roles_text_button">Confirm</string>
    <string name="player_s_name">Player\'s name</string>
    <string name="role_s_name">Role\'s name</string>
    <string name="next">Next</string>
    <string name="captain_label">Captain</string>
    <string name="role_unknown_label">Role unknown</string>
    <string name="role_villager_label">Villager</string>
    <string name="role_werewolf_label">Werewolf</string>
    <string name="role_fortune_teller_label">Fortune Teller</string>
    <string name="role_fortune_teller_card_description">Chaque nuit, elle connaît la vrai personnalité d’un joueur de son choix, elle doit aider les Villageois, sans être démasquée par les Loups-Garous</string>
    <string name="role_cupid_label">Cupid</string>
    <string name="role_cupid_card_description">La première nuit, il désigne 2 joueurs qui seront follement Amoureux l\'un de l\'autre. Si l\'un d\'eux meurt, l\'autre meurt de chagrin immédiatement. Un Loup-Garou et un villageois peuvent être Amoureux l\'un de l\'autre. Ils jouent alors contre tous les autres, Loups-Garous et Villageois. Si les amoureux survivent, alors ce sont eux qui gagnent. Le cupidon peut se désigner lui-même comme un des 2 Amoureux.</string>
    <string name="role_hunter_label">Hunter</string>
    <string name="role_hunter_card_description">Le chasseur, s\'il se fait égorger par les Loups-Garous ou lyncher par les joueurs, a le pouvoir de répliquer en tuant immédiatement n\'importe quel autre joueur.</string>
    <string name="role_witch_label">Witch</string>
    <string name="role_witch_card_description">Elle sait concocter 2 potions extrêmement puissantes : une potion de guérison, pour ressusciter le joueur tué par les Loups-Garous, une potion d\'empoisonnement, utilisée la nuit pour éliminer un joueur. La Sorcière doit utiliser chaque potion 1 seule fois dans la partie. Elle peut se servir des ses 2 potions la même nuit. Le matin suivant l\'usage de ce pouvoir, il pourra donc y avoir soit 0 mort, 1 mort ou 2 morts. La sorcière peut utiliser les potions à son profit, et donc se guérir elle-même.</string>
    <string name="role_little_girl_label">Little Girl</string>
    <string name="role_little_girl_card_description">Elle a le droit, la nuit, au moment où les Loups-Garous désignent leur victime, de les espionner (en entrouvant les yeux, etc). Si elle se fait surprendre par un des Loups-Garous, elle meurt immédiatement (en silence), à la place de la victime désignée.</string>
    <string name="vote_confirm_button_text">Confirm</string>
    <string name="choose_role_button_text">Choose roles</string>
    <string name="use_role_card_text_button">Use</string>
    <string name="card_description_text_hint">Description</string>
    <string name="title_card_text_hint">Card Title</string>
    <string name="game_info_text">Infos</string>
    <string name="start_the_game_text_button">Start the game</string>
    <string name="normal_turn_text_night_falls">The night falls, villagers go to sleep ...</string>
    <string name="normal_turn_text_fortune_teller_wakes_up">The Fortune Teller wakes up and choses a player to see his role</string>
    <string name="normal_turn_text_werewolves_wake_up">Werewolves wake up and pick a target to kill</string>
    <string name="normal_turn_text_witch_wakes_up">The Witch wakes up, she can either save the villager targeted by the wolves, or kill somebody else</string>
    <string name="normal_turn_text_village_wakes_up">The village wakes up</string>
    <string name="normal_turn_text_village_votes">The village will vote who to kill</string>
    <string name="normal_turn_text_village_kill">The village decided to kill </string>
    <string name="normal_turn_text_villagers_victory">Villagers Win !</string>
    <string name="normal_turn_text_werewolves_victory">Werewolves Win !</string>
    <string name="normal_turn_text_lovers_victory">Lovers Win !</string>
    <string name="fortune_teller_pick_header">Choose a player to see his role</string>
    <string name="werewolves_pick_header">Choose a target to kill</string>
    <string name="time_unit">%1$.2f s</string>
</resources>
