<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BUTTON START GAME -->
    <!-- Attention en français la première ligne ne tient pas sur tous les téléphones.
    Soit vous réduisez la taille du texte, soit vous passez sur 2 lignes -->
    <Button
        android:id="@+id/button_choose_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_role_button_text" />

    <!-- BUTTON START GAME -->
    <!-- Depuis Android 5.0 right et left sont deprecated. Il faut donc ajouter les balises start et end.
    Ici il vous manque layout_toEndOf=" ..." -->
    <Button
        android:id="@+id/button_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_choose_role"
        android:text="@string/start_game_button_text"
        android:enabled="false"/>

    <!-- + layout_marginStart="10dp" -->
    <CheckBox
        android:id="@+id/edit_player_list_button"
        android:text="@string/edit_text_button"
        android:layout_alignBaseline="@id/button_start_game"
        android:layout_toRightOf="@id/button_start_game"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--INPUT TEXTBOX PLAYER NAME-->
    <EditText
        android:id="@+id/player_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:width="200dp"
        android:hint="@string/player_name_hint" />

    <!--LIST PLAYER-->
    <!-- Vu que vous lui dites en dessous de et au dessus de, préférez une hauteur à 0dp. Ca lui évite
    de faire deux fois les calculs -->
    <android.support.v7.widget.ListViewCompat
        android:id="@+id/player_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/player_add_text"
        android:layout_below="@id/button_start_game"
        android:layout_marginBottom="5dp" />


    <!--BUTTON ADD PLAYER-->
    <Button
        android:id="@+id/button_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:text="@string/button_add_player_text" />

</RelativeLayout>