<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/role_attribution_player_s_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/player_s_name"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/role_attribution_player_s_role_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_attribution_player_s_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/role_s_name"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/role_attribution_player_s_role_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/role_attribution_player_s_role_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/paysan"
        android:clickable="true" />

    <TextView
        android:id="@+id/role_attribution_timer"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/role_attribution_player_s_role_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="50dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/role_attribution_next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/role_attribution_player_s_role_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textSize="25dp" />

</RelativeLayout>